# SOL-119-advisor

./: README.md  append.py  eval_modal_attn_bwd.py  eval_modal_moe_bwd.py  plot_comparison.py  pyproject.toml  run_agent_moe.sh
attn_bwd/: agent.py  results.json
attn_bwd/runs/20260619_190756_attn_bwd_starting_point/: experiment_history.md  proposals.md  results.tsv  snapshot_iter1.py  snapshot_iter10.py  snapshot_iter11.py  snapshot_iter12.py  snapshot_iter13.py  snapshot_iter15.py  snapshot_iter16.py  snapshot_iter17.py  snapshot_iter18.py  snapshot_iter19.py  snapshot_iter2.py  snapshot_iter20.py  snapshot_iter21.py  snapshot_iter22.py  snapshot_iter24.py  snapshot_iter25.py  snapshot_iter3.py  snapshot_iter6.py  snapshot_iter7.py  snapshot_iter8.py  snapshot_iter9.py
moe_bwd/: advisor_prompt.md  agent.py  results.json  run_eval.py  submission.py  tools.py  worker_prompt.md
moe_bwd/runs/20260623_055217_moe_bwd_starting_point/: experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter12.py  snapshot_iter14.py  snapshot_iter19.py  snapshot_iter20.py  snapshot_iter21.py  snapshot_iter23.py  snapshot_iter24.py  snapshot_iter25.py  snapshot_iter6.py  snapshot_iter7.py  snapshot_iter9.py
trimul/: agent.py  results.json
trimul/runs/20260617_002859_trimul_starting_point/: best_submission.py  experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter13.py  snapshot_iter15.py  snapshot_iter17.py  snapshot_iter18.py  snapshot_iter19.py  snapshot_iter2.py  snapshot_iter22.py  snapshot_iter23.py  snapshot_iter24.py  (+7 more)
